<resources>
    <string name="app_name">Tech Titans App</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="passwordConfirm_hint">Confirm password</string>
    <string name="nickname_hint">Nickname</string>
    <string name="login_button_text">Login</string>
    <string name="login_success">Login successful</string>
    <string name="login_error">Please enter both username and password</string>
    <string-array name="spinner_options">
        <item>Select category:</item>
        <item>Consoles and PC</item>
        <item>Software and Apps</item>
        <item>Gadgets</item>
        <item>Any</item>
    </string-array>
    <string name="channel_name_views_time">Channel Name • Views • Time</string>
    <string name="video_title">Video Title</string>
    <string name="all">All</string>
    <string name="music">Music</string>
    <string name="home">Home</string>
    <string name="for_you">For you</string>
    <string name="add_new_video" />
    <string name="subscriptions">Subscriptions</string>
    <string name="you">You</string>
    <string name="search_techtube">Search TechTube</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscribed">Subscribed</string>
    <string name="like">Like</string>
    <string name="unlike">Unlike</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="tap_to_view_comments">Tap to view comments</string>
    <string name="add_comment">add comment...</string>
    <string name="submit">submit</string>
    <string name="cancel">cancel</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="profile_picture" />
    <string name="publisher_name">publisher_name</string>
    <string name="base_server_url">http://10.0.2.2/</string>
    <string name="base_server_url_without_ending_slash">http://10.0.2.2</string>
    <string name="delete_user">Delete User</string>
</resources>